feat(minecraft): 支持1.21.10 版本并更新版本相关工具
- 添加对 Minecraft 1.21.10 版本的支持
- 更新 build.gradle 中的版本节点定义
- 新增 gca.accesswidener 文件用于1.21.10 版本
- 添加 GameProfileHelper 工具类以处理不同版本间的 GameProfile 兼容性
- 修改 PlayerAccessor 和 PlayerMixin 以适配 1.21.10 的类结构变化
- 更新命令和工具类中获取玩家信息的方式，使用 GameProfileHelper 统一处理
- 调整白名单和封禁列表命令逻辑，确保跨版本兼容性
- 更新设置文件以包含新版本号
- 添加对 Minecraft 1.21.9+ 版本的 GameProfile 处理支持
- 更新 BotCommand 和 FakePlayerResident 中的玩家加载逻辑
- 修复 BlistCommand 和 WlistCommand 中的权限检查逻辑
- 添加条件编译支持不同版本的 GameProfile 解析方式
- 优化玩家名获取逻辑以适配新版本 API 变更